tooling/nargo_cli/tests/snapshots/execution_success/diamond_deps_0/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QQQ6AMAgERX0QFLBw8ys24v+foMYeGj3aSTZ7m2wWhofxCgxfptprbcZFJHIKYtoweTFF0bIYGanpnow5TCx78YxOwkGHOsfx0NMFjQv/QWO/XXHvmqur/RSahub3NyeCJfyblAEAAA==",
  "debug_symbols": "ndHhCoMgEAfwd/FzH7LVVr3KGGF2hSAqpsGI3n1X5KpBY+yTnn9/x8GNpIHad5VQre5JeR9JbYWUoquk5swJrfB1nCISyspZAHwiuxyVYRaUI6XyUkZkYNIvn3rD1HI6ZjGNIwKqwRMbtkLCfJuiTcfnlCb5iml2efPs6Om5z9OVF8Wm6UEnX3QRdLrp5I/Zb/Rs9t98fj34B1aMC/u5rYFZwWoJa9l6xXepe5qQhG0bqzk03sLcacmw9ws=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
