tooling/nargo_cli/tests/snapshots/execution_success/diamond_deps_0/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : [_2]",
    "EXPR [ (-2, _0) (-2, _1) (1, _2) -3 ]"
  ],
  "debug_symbols": "ndHhCoMgEAfwd/FzH2abW/UqY4TZFYKomAYjevddkasGjbFPev79HQc3kBqq0JZSN6YjxX0glZNKybZURnAvjcbXYUxILEvvAPCJbHJUljvQnhQ6KJWQnqswf+os1/PpucP0lBDQNZ7YsJEKptuYrPp0TGmaLZiy85uzvafHPrssPM9XTXc6/aJZ1OvoLP1j9hs9mv03n113/oEVF9J9bqvnTvJKwVI2QYtN6p82JnHb1hkBdXAwdZoz7P0C",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
